fix some ui issue on mobile

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -42,3 +42,11 @@
     }
   }
 }
+
+@media screen and (max-width: 1024px) {
+  .App {
+    &__WeatherWrapper {
+      width: 90%;
+    }
+  }
+}
