--- a/src/features/Current/Current.scss
+++ b/src/features/Current/Current.scss
@@ -17,7 +17,6 @@
       padding: 0 24px;
       order: -1;
       text-align: center;
-      color: #161313;
     }
   }
 
